src/logic/calculate.pegjs
Expression
  = head:Term tail:(_ ("+" / "-") _ Term)* {
      return tail.reduce(function(result, element) {
        if (element[1] === "+") { return result + element[3]; }
        if (element[1] === "-") { return result - element[3]; }
      }, head);
    }

Term
  = head:Factor tail:(_ ("*" / "/") _ Factor)* {
      return tail.reduce(function(result, element) {
        if (element[1] === "*") { return result * element[3]; }
        if (element[1] === "/") { return result / element[3]; }
      }, head);
    }

Factor
  = "(" _ expr:Expression _ ")" { return expr; }
  / NUMBER

NUMBER
  = _ digits:([0-9]+ "." [0-9]+) _ { return Number(digits.flat().join("")); }
  / _ digits:[0-9]+ _ { return Number(digits.join("")); }

_ "whitespace"
  = [ \t\n\r]*
